Bug 479730 - After installing app with launch shortcut, it doesn't work until logging out and back in
Summary: After installing app with launch shortcut, it doesn't work until logging out ...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kglobalaccel
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.113.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
: 483925 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-01-13 10:29 UTC by Deniil
Modified: 2024-03-22 13:12 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Deniil 2024-01-13 10:29:43 UTC
SUMMARY

After installing Spectacle `pacman -S spectacle`, shortcuts refuse to work. Settings panel shows that shortcuts are set as well as in System Settings -> Shortcuts -> Spectacle.

Shortcuts will refuse to work until you log out and back in again


STEPS TO REPRODUCE
1. Install and launch spectacle

OBSERVED RESULT
Shortcuts will refuse to work until you log out and back in

EXPECTED RESULT
Shortcuts should register in realtime

SOFTWARE/OS VERSIONS
Linux: Linux 6.6.10-arch1-1
KDE Plasma Version: KDE Plasma 5.27.10
KDE Frameworks Version: 5.113.0
Qt Version: 5.15.12

Operating System: Arch Linux 
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 5700G with Radeon Graphics
Memory: 31,2 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 3060/PCIe/SSE2
Manufacturer: Micro-Star International Co., Ltd.
Product Name: MS-7C95
System Version: 1.0

Thank you and let me know if any other info is needed
Comment 1 Nicolas Fella 2024-03-18 20:05:44 UTC
*** Bug 483925 has been marked as a duplicate of this bug. ***
Comment 2 Bug Janitor Service 2024-03-18 22:08:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kglobalacceld/-/merge_requests/47
Comment 3 Nicolas Fella 2024-03-22 13:11:23 UTC
Git commit 995052f85acd4cf089c4394aa3901c729c0e4f8b by Nicolas Fella.
Committed on 22/03/2024 at 13:09.
Pushed by nicolasfella into branch 'master'.

Update service-based shortcuts when service database changes

When (un)installing apps detect new apps with shortcuts and
remove shortcuts from no longer installed apps
Related: bug 483918

M  +39   -1    src/globalshortcutsregistry.cpp
M  +2    -0    src/globalshortcutsregistry.h

https://invent.kde.org/plasma/kglobalacceld/-/commit/995052f85acd4cf089c4394aa3901c729c0e4f8b
Comment 4 Nicolas Fella 2024-03-22 13:12:22 UTC
Git commit 3e05eb02cc867b500ae0436824d58fe4feb16c52 by Nicolas Fella.
Committed on 22/03/2024 at 13:12.
Pushed by nicolasfella into branch 'Plasma/6.0'.

Update service-based shortcuts when service database changes

When (un)installing apps detect new apps with shortcuts and
remove shortcuts from no longer installed apps
Related: bug 483918
(cherry picked from commit 995052f85acd4cf089c4394aa3901c729c0e4f8b)

M  +39   -1    src/globalshortcutsregistry.cpp
M  +2    -0    src/globalshortcutsregistry.h

https://invent.kde.org/plasma/kglobalacceld/-/commit/3e05eb02cc867b500ae0436824d58fe4feb16c52