Update service-based shortcuts when service database changes

When (un)installing apps detect new apps with shortcuts and
remove shortcuts from no longer installed apps

BUG: 479730
BUG: 483918